--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-
+This is a test of my ability to create a README file and add text.
+This is the second line of text that I am adding.
+THis is only a test.
+If this were a real README file, you would be directed to actually understand some code.
